tests/errors/syn_while11.java
public class syn_while11 {
public static void main(String[] args){
while true || false ) {
 
}
}
}